tests/paczka1/small_fuzzy/66865390.err
Error in line 3: lpH A568 36,0
Error in line 12: cRNubCIuW S613 90,5
